Allow binary and dimmer switches to be grouped together.  Allow a custom host to be sent to the power monitor hubs.